--- a/literature.bib
+++ b/literature.bib
@@ -1,7 +1,6 @@
-% ....názov súboru je: literature.bib
-% zdroj na webe
-@misc{PLP-Framework,
+@book{Coplien:MPD,
 	author = "Petraq Papajorgji, J. and Panos Pardalos, M.",
 	title = "{UML Diagrams}",
-	howpublished = "\url{https://link.springer.com/chapter/10.1007/978-1-4899-7463-1_6}",
+	publisher = "Springer, Boston, MA",
+	year = 2014
 }
