--- a/literature.bib
+++ b/literature.bib
@@ -1,6 +1,13 @@
-@book{Coplien:MPD,
-	author = "Petraq Papajorgji, J. and Panos Pardalos, M.",
+@book{petraq14,
+	author = "Papajorgji, Petraq J. and Pardalos, Panos M.",
 	title = "{UML Diagrams}",
 	publisher = "Springer, Boston, MA",
-	year = 2014
+	year = 2014,
+}
+
+@book{eriksson98,
+	author = "Eriksson, H.E. and Penker, M. and Lyons, B. and Fado D.",
+	title = "{UML toolkit}",
+	publisher = "Google Scholar",
+	year = 1998,
 }
