--- a/article.tex
+++ b/article.tex
@@ -74,7 +74,12 @@ Program sa tým pádom môže modelovať podľa toho, ako počítač vykonáva o
 Takisto sa programy môžu modelovať viac abstraktne ako doteraz, akurát s tým, že výsledné diagramy korektne opíšu fungovanie programu bez toho, aby mali vplyv na štýl písania kódu. \newline
 
 \section{Ďalšia časť}
-\ldots
+
+\begin{figure*}[tbh]
+\centering
+\includegraphics[scale=0.7]{tab.pdf}
+\caption{Úroveň využitia jednotlivých typov UML diagramov. \cite{reggio13}}
+\end{figure*}
 
 \section{Záver}
 \ldots
