--- a/literature.bib
+++ b/literature.bib
@@ -11,3 +11,10 @@
 	publisher = "Google Scholar",
 	year = 1998,
 }
+
+@book{reggio13,
+	author = "Reggio, G. and Leotta, M. and Ricca, F. and Clerissi D.",
+	title = "{What are the used UML diagrams? A Preliminary Survey}",
+	publisher = "Google Scholar",
+	year = 2013,
+}
