Added all the diagrams

--- a/literature.bib
+++ b/literature.bib
@@ -18,3 +18,10 @@
 	publisher = "Google Scholar",
 	year = 2013,
 }
+
+@book{booch00,
+	author = "Booch, G. and Rambaugh, J. and Jacobson, I.",
+	title = "{History of UML}",
+	publisher = "Google Scholar",
+	year = 2000,
+}
