--- a/article.tex
+++ b/article.tex
@@ -23,7 +23,7 @@
     {\small \texttt{xlukacsovics@stuba.sk}}
     }
 
-\date{\small 5.11.2021} % upravte
+\date{\small 14.12.2021} % upravte
 
 \providecommand{\abstr}[1]{\textbf{\textit{Abstrakt---}} #1}
 \providecommand{\keywords}[1]{\textbf{\textit{Klúčové slová---}} #1}
@@ -42,7 +42,24 @@ abstraktný opis správania sa jednotlivých častí počítačového programu. 
 rôznych vlastností kódu. Cieľom sekvenčných diagramov je opis interakcie medzi objektami programu, s tým, že sa
 berie ohľad na poradie vykonávaného postupu. \cite{petraq14}
 
-\section{Komunikácia objektov} \label{nejaka}
+\section{Úroveň využitia}
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque pretium urna, non convallis ante consequat nec. 
+Quisque nec tellus a est ornare hendrerit eu vel nisl. Sed aliquet augue nisi, in porttitor urna ultrices sed. 
+Aliquam ultrices sagittis quam ut maximus. Sed rutrum, dui vitae pulvinar convallis, ex odio maximus justo, id finibus ligula turpis non elit. 
+Cras imperdiet finibus augue vel fermentum. Maecenas ac nibh ullamcorper, tempor magna et, congue elit. \newline
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque pretium urna, non convallis ante consequat nec. 
+Quisque nec tellus a est ornare hendrerit eu vel nisl. Sed aliquet augue nisi, in porttitor urna ultrices sed.
+Aliquam ultrices sagittis quam ut maximus. Sed rutrum, dui vitae pulvinar convallis, ex odio maximus justo, id finibus ligula turpis non elit. 
+Cras imperdiet finibus augue vel fermentum. Maecenas ac nibh ullamcorper, tempor magna et, congue elit.
+
+\begin{figure*}[tbh]
+\centering
+\includegraphics[scale=0.5]{tab.pdf}
+\caption{Úroveň využitia jednotlivých typov UML diagramov. \cite{reggio13}}
+\end{figure*}
+
+\section{Komunikácia objektov}
 
 \noindent Objekty si navzájom posielajú správy (požiadavky) medzi sebou. Tieto
 správy medzi objektami sa v diagrame zaznačia ako horizontálne šípky. Smer týchto šípok určuje odosielateľa a
@@ -52,33 +69,27 @@ na vrchu tejto čiary je meno objektu. Tieto vertikálne čiary značia aj dĺž
 
 \noindent Objekty si môžu poslať správy aj pre seba. Takéto správy sa nazývajú reflexívne správy. 
 Ako už bolo spomenuté, poradie týchto správ je dôležité. Zmena poradia môže zmeniť korektnosť programu
-v niektorých prípadoch. \cite{petraq14}  \newline
+v niektorých prípadoch. \cite{petraq14}
+
+%\noindent Na obr. 2 môžeme vidieť veľmi jednoduchú ukážku sekvenčného UML diagramu.
 
 \begin{figure*}[tbh]
 \centering
-\includegraphics[scale=0.7]{seq_diagram.pdf}
-\caption{Ukážka sekvenčného diagramu.}
+\includegraphics[scale=0.8]{simple_diag.pdf}
+\caption{Ukážka sekvenčného diagramu.\cite{booch00}}
 \end{figure*}
-
-\noindent Na obr. 1 môžeme vidieť veľmi jednoduchú ukážku sekvenčného UML diagramu.
-
-\section{Využitie}
-Cieľom UML diagramov, vo všeobecnosti, je poskytnúť ucelenejšie a jednoduchšie zobrazenie fungovania softvéru, tak, aby tomu porozumeli aj laici. 
-Problém je v tom, že sa väčšinou softvér dizajnuje najprv ako UML diagram, a až potom sa píše samotný kód programu. Keďže UML diagramy používajú objektovo-orientovaný princíp, tak aj kód programu musí byť písaný objektovo-orientovane. \cite{eriksson98}
-Ja, osobne, nie som veľký zastánca objektovo-orientovaného programovania. Objektovo-orientované programovanie ma skôr spomaluje, preto radšej programujem procedurálne. Kvôli tomu, že UML diagramy sú úzko späté so štýlom programovania, som nútený programovať v paradigme, ktorá 
-ma robí menej efektívnym. Preto je, podľa mňa, lepšie nemodelovať kód programu podľa nadizajnovaného diagramu, ale robiť to opačne. Fungovanie programu by nemalo mať vplyv na to, akým spôsobom ten kód bol napísaný. Objekty v diagrame nemusia reprezentovať explicitne objekty v kóde, môžu reprezentovať 
-iné abstraktné podsystémy programu. Tento spôsob zaručuje aj to, že diagramy môžu byť menej abstraktné, nemusia sa riadiť princípom objektového orientovania. Menej abstraktné diagramy môžu byť užitočné pre programátorov, ktorí pracujú na nižšej úrovni, bližšie k hardvéru. \newline 
-
-\noindent Sekvenčné diagramy sa na tento viacej flexibilnejší postup tvorenia diagramov hodia najviac, podľa mňa. Keďže zachytávajú životnosť objektov a poradie operácií, mnoho operácií sa dá zapísať paralelne. Paralelný zápis môže byť užitočný pre programátorov, keďže aj počítač funguje paralelne. 
-Program sa tým pádom môže modelovať podľa toho, ako počítač vykonáva operácie, napr. pomocou vlákien procesora alebo pomocou SIMD registrov procesora. Takýto model môže byť užitočný pre programátorov, ktorí sa sústreďujú na optimalizovanie kódu. 
-Takisto sa programy môžu modelovať viac abstraktne ako doteraz, akurát s tým, že výsledné diagramy korektne opíšu fungovanie programu bez toho, aby mali vplyv na štýl písania kódu. \newline
 
 \section{Ďalšia časť}
 
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed pellentesque pretium urna, non convallis ante consequat nec. 
+Quisque nec tellus a est ornare hendrerit eu vel nisl. Sed aliquet augue nisi, in porttitor urna ultrices sed.
+Aliquam ultrices sagittis quam ut maximus. Sed rutrum, dui vitae pulvinar convallis, ex odio maximus justo, id finibus ligula turpis non elit. 
+Cras imperdiet finibus augue vel fermentum. Maecenas ac nibh ullamcorper, tempor magna et, congue elit.
+
 \begin{figure*}[tbh]
 \centering
-\includegraphics[scale=0.7]{tab.pdf}
-\caption{Úroveň využitia jednotlivých typov UML diagramov. \cite{reggio13}}
+\includegraphics[scale=0.8]{cond_diag.pdf}
+\caption{Modelovanie podmienok. \cite{booch00}}
 \end{figure*}
 
 \section{Záver}
