The pain is over

--- a/article.tex
+++ b/article.tex
@@ -97,7 +97,7 @@ Na obr.~\ref{diag1} je jednoduchá ukážka sekvenčného diagramu.
 Pomocou sekvenčných diagramov vieme vyjadriť aj zložitejšie koncepty, ako sú napríklad cykly a podmienky. Na vyjadrenie týchto konceptov môžeme použiť tzv. kombinované fragmenty.
 Kombinované fragmenty slúžia na zoskupenie správ podľa nejakého kritéria. 
 Kombinované fragmenty sa v diagrame značia rovnako ako sa značia oddelenia diagramov. Správy sa ohraničia obdĺžnikom a do ľavého horného rohu obdĺžnika sa napíše meno 
-kombinovaného fragmentu. Existuje niekoľko typov kombinovaných fragmentov, ako sú napr. cykly, voľby a alternatívy. \cite{booch00} \newline
+kombinovaného fragmentu. Existuje niekoľko typov kombinovaných fragmentov, ako sú napr. cykly, voľby, alternatívy, a tak ďalej. \cite{booch00} \newline
 
 \noindent Cykly zaznačujeme do diagramov ich anglickým názvom „loop". Pod meno sa do hranatých zátvoriek píše podmienka, ktorá sa overí na začiatku každej iterácie cyklu. 
 Ak je podmienka splnená, spustí sa nová iterácia. 
@@ -121,23 +121,19 @@ Takisto sú vhodné na modelovanie komplexnejšej logiky programu.
 \end{figure*}
 
 \section{Reakcia na témy z prednášok} \label{lect}
-\paragraph{Spoločenské súvislosti.}
-\ldots
 
 \paragraph{Historické súvislosti.}
-\ldots
-
-\paragraph{Technológia a ľudia.}
-\ldots
+Začiatok vývoja UML modelu je úzko spätý s náhlou popularitou objektovo-orientovaného programovania na konci minulého storočia. 
+Odvtedy vzniklo mnoho rôznych verzií a druhov UML modelu.
 
 \paragraph{Udržateľnosť a etika.}
-\ldots
+Pre úspešnú udržateľnosť pri závere nejakej práce je potrebné si tú prácu zmysluplne rozdeliť na menšie inkrementy, na ktorých sa potom postupne pracuje. 
+Pri akomkoľvek modelovaní je rozumné si najprv vytvoriť náčrt, ktorý zachytáva všetky potrebné nápady, a až potom by sa mal zhotoviť výsledný model.  
 
 \section{Záver} \label{end}
 Sekvenčné UML diagramy patria medzi najpopulárnejšie typy UML diagramov. Sú veľmi flexibilné a ľahko sa nimi modeluje logika programu. 
 Existuje mnoho náučných materiálov a rôznych nástrojov na tvorbu sekvenčných diagramov, vďaka ktorým sú tieto diagramy veľmi prístupné na použitie. 
 
-% týmto sa generuje zoznam literatúry z obsahu súboru literature.bib podľa toho, na čo sa v článku odkazujete
 \bibliography{literature}
-\bibliographystyle{plain} % prípadne alpha, abbrv alebo hociktorý iný
+\bibliographystyle{plain}
 \end{document}
